Build up 'flip vertical' and 'flip horizontal' method to making pattern.

--- a/config/locales/kaminari.en.yml
+++ b/config/locales/kaminari.en.yml
@@ -1,8 +1,8 @@
 en:
   views:
     pagination:
-      first: '<i class="fas fa-angle-double-left"></i>'
+      first: '<i class="fas fa-step-forward"></i>'
       previous: '<i class="fas fa-angle-left"></i>'
       truncate: "..."
       next: '<i class="fas fa-angle-right"></i>'
-      last: '<i class="fas fa-angle-double-right"></i>'
+      last: '<i class="fas fa-step-backward"></i>>'
